--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "beautifulsoup4>=4.14.2",
     "e2b-code-interpreter>=2.3.0",
     "google-adk>=1.19.0",
