--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "asyncpg>=0.31.0",
     "beautifulsoup4>=4.14.2",
     "e2b-code-interpreter>=2.3.0",
     "google-adk>=1.19.0",
