chore: update Dockerfile ADK web path to `/app` and expand `.dockerignore` with build artifacts.

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,3 +9,8 @@ my_agent_data.db
 my_agent_data_dump.sql
 csv_exports
 last-retrieval-*.html
+build
+dist
+*.egg-info
+google-cloud-sdk
+google-cloud-cli-*.tar.gz
